0031681: Foundation Classes - Shared Libraries Cannot Be Loaded

Standard_ErrorHandler now accesses global mutex via proxy function
instead of a global variable to avoid initialization order issues.